; ModuleID = '/home/carl/AnghaBench/netdata/collectors/tc.plugin/extr_plugin_tc.c_tc_class_index_find.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/tc.plugin/extr_plugin_tc.c_tc_class_index_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tc_class = type { i8*, i64 }
%struct.tc_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tc_class* (%struct.tc_device*, i8*, i64)* @tc_class_index_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tc_class* @tc_class_index_find(%struct.tc_device* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.tc_device*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.tc_class, align 8
  store %struct.tc_device* %0, %struct.tc_device** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = getelementptr inbounds %struct.tc_class, %struct.tc_class* %7, i32 0, i32 0
  store i8* %8, i8** %9, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i64, i64* %6, align 8
  br label %18

14:                                               ; preds = %3
  %15 = getelementptr inbounds %struct.tc_class, %struct.tc_class* %7, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = call i64 @simple_hash(i8* %16)
  br label %18

18:                                               ; preds = %14, %12
  %19 = phi i64 [ %13, %12 ], [ %17, %14 ]
  %20 = getelementptr inbounds %struct.tc_class, %struct.tc_class* %7, i32 0, i32 1
  store i64 %19, i64* %20, align 8
  %21 = load %struct.tc_device*, %struct.tc_device** %4, align 8
  %22 = getelementptr inbounds %struct.tc_device, %struct.tc_device* %21, i32 0, i32 0
  %23 = bitcast %struct.tc_class* %7 to i32*
  %24 = call i64 @avl_search(i32* %22, i32* %23)
  %25 = inttoptr i64 %24 to %struct.tc_class*
  ret %struct.tc_class* %25
}

declare dso_local i64 @simple_hash(i8*) #1

declare dso_local i64 @avl_search(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
